# casparianflow

./: .claude_checkpoint.json  .gitignore  .pre-commit-config.yaml  .scanignore  .sesskey  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DESIGN_REVIEW_FIXES.md  E2E_TEST_PLAN.md  GAP_ANALYSIS.md  MANUAL_TESTING_GUIDE.md  MCP_GAPS_CHECKPOINT.md  NEXT_ACTIONS.md  OPERATION_IRON_CORE_STATUS.md  OPERATION_IRON_CORE_SUMMARY.md  PARALLEL_PLAN.md  PHASE_2_STATUS.md  PHASE_3_STATUS.md  PHASE_4_STATUS.md  PRODUCT_STRATEGY.md  README.md  RUST_MIGRATION_STATUS.md  SCOUT_PHASE_SCRATCHPAD.md  SCOUT_UI_EXECUTION_PLAN.md  SPLIT_PLANE_REFACTOR_SUMMARY.md  STRATEGY.md  UI_RESTRUCTURE_PLAN.md  UNIFIED_ARCHITECTURE_PLAN.md  WORKER_PROMPTS.md  actionable_findings.json  anchor.md  casp_sa_base.py  code_execution_workflow.md  configure_manual_plugins.py  demo.db  demo.py  demo_manual.py  (+32 more)
crates/casparian/: Cargo.toml
crates/casparian/benches/: scanner_perf.rs
crates/casparian/examples/: download_model.rs
crates/casparian/src/: bundler.rs  lib.rs  main.rs  parser_metadata.rs  publish.rs  telemetry.rs
crates/casparian/src/ai/: audit.rs  config.rs  draft.rs  mod.rs  types.rs
crates/casparian/src/cli/: backfill.rs  config.rs  context.rs  error.rs  files.rs  job.rs  jobs.rs  mcp.rs  mod.rs  output.rs  parser.rs  perf.rs  pipeline.rs  plugin.rs  preview.rs  publish.rs  rule.rs  run.rs  scan.rs  schema.rs  sink.rs  source.rs  support_bundle.rs  tag.rs  tape.rs  (+3 more)
crates/casparian/tests/: cache_perf_test.rs  cli_files_json.rs  cli_jobs_json.rs  cli_rule_json.rs  cli_scan_preview_json.rs  cli_source_json.rs  cli_support.rs  cli_tag_pipeline_queue.rs  cli_tape.rs  cli_topic_json.rs  cli_worker_json.rs  conformance_t0_config.rs  conformance_t1_rename.rs  critical_paths.rs  crown_jewel_e2e.rs  fix_demo_e2e.rs  fixture_plugin_integration.rs  glob_explorer_latency_e2e.rs  pathfinder_llm_e2e.rs  publish_integration.rs  scan_progress_e2e.rs  tui_chat_e2e.rs  tui_e2e.rs  tui_pty_e2e.rs  ultrathink_e2e.rs  variant_grouping_real_world.rs  workspace_smoke.rs
crates/casparian_backtest/: CLAUDE.md  Cargo.toml
crates/casparian_backtest/src/: failfast.rs  high_failure.rs  ids.rs  iteration.rs  lib.rs  loop_.rs  metrics.rs
crates/casparian_backtest/tests/: e2e_backtest.rs
crates/casparian_db/: CLAUDE.md  Cargo.toml
crates/casparian_db/src/: backend.rs  dev.rs  error.rs  lib.rs  license.rs  lock.rs  parser_lab.rs  pool.rs  schema.rs  scout.rs  sentinel.rs  sql_guard.rs  types.rs
crates/casparian_db/tests/: db_actor.rs  duckdb_locking.rs
crates/casparian_ids/: Cargo.toml
crates/casparian_ids/src/: lib.rs
crates/casparian_intent/: Cargo.toml
crates/casparian_intent/src/: lib.rs
crates/casparian_mcp/: CLAUDE.md  Cargo.toml
crates/casparian_mcp/benches/: quick_scan_perf.rs
crates/casparian_mcp/src/: db_store.rs  lib.rs  prompts.rs  protocol.rs  redaction.rs  server.rs  types.rs
crates/casparian_mcp/tests/: e2e_tools.rs
crates/casparian_profiler/: Cargo.toml
crates/casparian_profiler/src/: lib.rs
crates/casparian_protocol/: CLAUDE.md  Cargo.toml
crates/casparian_protocol/src/: config.rs  defaults.rs  http_types.rs  idempotency.rs  lib.rs  metrics.rs  naming.rs  paths.rs  telemetry.rs  types.rs
crates/casparian_protocol/tests/: python_compat.rs
crates/casparian_schema/: CLAUDE.md  Cargo.toml
crates/casparian_schema/src/: amendment.rs  approval.rs  contract.rs  lib.rs  output_specs.rs  storage.rs
crates/casparian_schema/tests/: e2e_contracts.rs
crates/casparian_scout/: CLAUDE.md  Cargo.toml
crates/casparian_scout/src/: config.rs  db.rs  engine.rs  error.rs  extractor.rs  file_uid.rs  lib.rs  patterns.rs  router.rs  rule_apply.rs  scanner.rs  tagger.rs  types.rs  wire.rs
crates/casparian_scout/tests/: e2e.rs
crates/casparian_security/: Cargo.toml
crates/casparian_security/src/: gatekeeper.rs  lib.rs  signing.rs
crates/casparian_security/tests/: test_azure_real.rs
crates/casparian_sentinel/: CLAUDE.md  Cargo.toml
crates/casparian_sentinel/src/: catalog_executor.rs  control.rs  control_client.rs  lib.rs  main.rs  metrics.rs  sentinel.rs  sqlite_executor.rs
crates/casparian_sentinel/tests/: integration.rs
crates/casparian_sinks/: Cargo.toml
crates/casparian_sinks/src/: lib.rs
crates/casparian_sinks/tests/: duckdb_sink_locking.rs  output_naming.rs
crates/casparian_sinks_duckdb/: Cargo.toml
crates/casparian_sinks_duckdb/src/: lib.rs
crates/casparian_state_store/: Cargo.toml
crates/casparian_state_store/src/: api_storage.rs  expected_outputs.rs  lib.rs  models.rs  queue.rs  schema_version.rs  state_store.rs
crates/casparian_tape/: Cargo.toml
crates/casparian_tape/src/: lib.rs
crates/casparian_test_utils/: Cargo.toml
crates/casparian_test_utils/docker/: docker-compose.yml
crates/casparian_test_utils/src/: cleanup.rs  config.rs  lib.rs
crates/casparian_test_utils/tests/: integration.rs
crates/casparian_worker/: CLAUDE.md  Cargo.toml
crates/casparian_worker/shim/: bridge_shim.py  casparian_types.py  run_shim.py
crates/casparian_worker/src/: analyzer.rs  bridge.rs  cancel.rs  lib.rs  main.rs  metrics.rs  native_runtime.rs  runtime.rs  schema_validation.rs  shredder.rs  venv_manager.rs  worker.rs
crates/casparian_worker/tests/: bridge_stability.rs  concurrency_test.rs  e2e_type_inference.rs  evtx_native_e2e.rs  integration.rs
crates/cf_protocol/: Cargo.toml
crates/cf_protocol/src/: error.rs  lib.rs  types.rs
crates/cf_protocol/tests/: python_compat.rs
crates/cf_security/: Cargo.toml
crates/cf_security/src/: azure.rs
crates/cf_security/tests/: test_azure_real.rs
review_bundle/crates/casparian_schema/: Cargo.toml
review_bundle/crates/casparian_security/: Cargo.toml
review_bundle/parsers/evtx_native/: Cargo.toml
review_bundle/tauri-ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/: .taurignore  Cargo.toml  scout.db-shm  scout.db-wal  tauri.conf.json
ui/src-tauri/capabilities/: default.json
ui/src-tauri/resources/: sample_transactions.csv
ui/src-tauri/src/: db.rs  lib.rs  main.rs  scout.rs
(+1103 files in other folders)
