[workspace]
resolver = "2"
members = [
    "crates/casparian_protocol",
    "crates/casparian_worker",
    "crates/casparian_sentinel",
    "crates/casparian",
    "crates/casparian_security",
    # "crates/casparian_scout",  # Inlined into casparian::scout module
    "crates/casparian_schema",
    "crates/casparian_backtest",
    "crates/casparian_mcp",
    "crates/casparian_test_utils",
    "crates/casparian_profiler",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Casparian Flow Team"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
byteorder = "1.5"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# ZeroMQ (for future use in worker/sentinel)
zeromq = "0.4"

# Arrow & Parquet (for future use in data plane)
arrow = "53.3"
parquet = "53.3"

# Database (for future use in sentinel)
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite", "postgres", "chrono"] }

# Tracing/Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI parsing (for future use)
clap = { version = "4.5", features = ["derive", "env"] }

# Parallel processing
rayon = "1.10"
