[workspace]
resolver = "2"
members = [
    "crates/casparian_protocol",
    "crates/casparian_logging",
    "crates/casparian_worker",
    "crates/casparian_sentinel",
    "crates/casparian_sinks",
    "crates/casparian",
    "crates/casparian_security",
    # "crates/casparian_scout",  # Inlined into casparian::scout module
    "crates/casparian_ids",
    "crates/casparian_schema",
    "crates/casparian_backtest",
    "crates/casparian_test_utils",
    "crates/casparian_profiler",
    "crates/casparian_db",
]
default-members = [
    "crates/casparian",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Casparian Flow Team"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.42", features = ["rt", "rt-multi-thread", "macros", "sync", "time", "io-util", "io-std", "process", "net"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
byteorder = "1.5"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# ZeroMQ (for future use in worker/sentinel)
zeromq = "0.4"

# Arrow & Parquet (for future use in data plane)
# Upgraded to 54.x to fix chrono 0.4.43 incompatibility in arrow-arith 53.x
arrow = "54"
parquet = "54"

# Note: We need chrono with serde for time handling
chrono = { version = "0.4", features = ["serde"] }

# Database (for future use in sentinel)
sqlx = { version = "0.8", default-features = false }

# Tracing/Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI parsing (for future use)
clap = { version = "4.5", features = ["derive", "env"] }
