[project]
name = "casparianflow"
version = "0.1.0"
description = "Bringing dark data online"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.4",
    "pathspec>=0.12.1",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.11.0",
    "sqlalchemy>=2.0.44",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "nuitka>=2.8.4",
    "pre-commit>=4.4.0",
    "pytest>=9.0.0",
    "ruff>=0.14.4",
    "tqdm>=4.67.1",
]
