[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/casparian_flow"]

[project]
name = "casparianflow"
version = "5.0.0"
description = "Enterprise Artifact Registry with Bridge Mode Execution"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.2.2",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.44",
    "numpy>=1.26.0",
    "pyodbc>=5.0.0",
    "tqdm>=4.67.1",
    "pytest>=9.0.1",
    "pyarrow>=22.0.0",
    "pyzmq>=27.1.0",
    "openai>=2.12.0",
    "anthropic>=0.75.0",
    "pathspec>=0.12.1",
    "fastapi>=0.127.0",
    "python-fasthtml>=0.12.36",
    "uvicorn>=0.34.0",
    # v5.0 Bridge Mode: Ed25519 signing
    "cryptography>=44.0.0",
]

[project.optional-dependencies]
# Enterprise mode (Azure AD authentication)
entra = [
    "msal>=1.28.0",
    "PyJWT[crypto]>=2.8.0",
]

[project.scripts]
# v5.0 Bridge Mode CLI
casparian = "casparian_flow.cli.publish:main"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "ipykernel>=7.1.0",
    "ruff>=0.14.4",
    "pygount>=3.1.0",
    # VCR for Azure integration testing
    "vcrpy>=6.0.0",
    "pytest-vcr>=1.0.2",
]

[tool.ruff]
exclude = [
    "scripts/",
    "tests/",
    "venv/",
    "__pypackages__/",
]
