[package]
name = "casparian"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
casparian_sentinel = { path = "../casparian_sentinel" }
casparian_worker = { path = "../casparian_worker" }
cf_protocol = { path = "../cf_protocol" }
cf_security = { path = "../cf_security" }

# Async runtime
tokio.workspace = true

# Error handling
anyhow.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# CLI
clap.workspace = true

# ZeroMQ
zeromq.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Utilities
uuid = { version = "1.11", features = ["v4"] }

# Database
sqlx.workspace = true

# CLI utilities
comfy-table = "7"
walkdir = "2"
csv = "1"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"
dirs = "5"
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
indicatif = { version = "0.17", features = ["rayon"] }

# Arrow/Parquet for preview
arrow.workspace = true
parquet.workspace = true

# Signal handling (Unix)
[target.'cfg(unix)'.dependencies]
signal-hook = "0.3"
libc = "0.2"

# Signal handling (Windows)
[target.'cfg(windows)'.dependencies]
ctrlc = "3.4"

[dev-dependencies]
tempfile = "3.14"
