[package]
name = "casparian"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# NOTE: casparian_scout has been inlined into crate::scout module
casparian_sentinel = { path = "../casparian_sentinel" }
casparian_worker = { path = "../casparian_worker" }
casparian_mcp = { path = "../casparian_mcp" }
casparian_protocol = { path = "../casparian_protocol" }
casparian_security = { path = "../casparian_security" }
casparian_db = { path = "../casparian_db" }

# Async runtime
tokio.workspace = true

# Error handling
anyhow.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# CLI
clap.workspace = true

# ZeroMQ
zeromq.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
toml = "0.8"
bincode = "1.3"
zstd = "0.13"

# Utilities
uuid = { version = "1.11", features = ["v4"] }
blake3 = "1"
base64 = "0.22"

# Database
sqlx.workspace = true

# Parallel processing
rayon.workspace = true

# CLI utilities
comfy-table = "7"
walkdir = "2"
csv = "1"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"
globset = "0.4"
ignore = "0.4"
dirs = "5"
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
zip = { version = "2", features = ["deflate"] }
indicatif = { version = "0.17", features = ["rayon"] }

# Arrow/Parquet for preview
arrow.workspace = true
parquet.workspace = true

# TUI
ratatui = "0.29"
crossterm = "0.28"

# TUI LLM Integration
async-trait = "0.1"
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
thiserror.workspace = true
tokio-stream = "0.1"

# Signal handling (Unix)
[target.'cfg(unix)'.dependencies]
signal-hook = "0.3"
libc = "0.2"

# Signal handling (Windows)
[target.'cfg(windows)'.dependencies]
ctrlc = "3.4"

[features]
default = []
full = []  # Include slow tests (PTY, LLM, network)
perf = []  # Performance regression tests

[dev-dependencies]
tempfile = "3.14"
ureq = "2"
futures = "0.3"
portable-pty = "0.8"
filetime = "0.2"
