[package]
name = "casparian"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# NOTE: casparian_scout has been inlined into crate::scout module
casparian_sentinel = { path = "../casparian_sentinel" }
casparian_worker = { path = "../casparian_worker" }
casparian_protocol = { path = "../casparian_protocol" }
casparian_sinks = { path = "../casparian_sinks", default-features = false }
casparian_security = { path = "../casparian_security" }
casparian_db = { path = "../casparian_db", default-features = false }
casparian_schema = { path = "../casparian_schema" }
casparian_ids = { path = "../casparian_ids" }
casparian_mcp = { path = "../casparian_mcp" }
casparian_tape = { path = "../casparian_tape" }

# Error handling
anyhow.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender = "0.2"

# CLI
clap.workspace = true

# ZeroMQ
zmq.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
toml = "0.8"
serde_yaml = "0.9"
base64.workspace = true
ed25519-dalek.workspace = true

# Async runtime (for MCP)
tokio = { version = "1", features = ["full", "rt-multi-thread"] }

# Utilities
uuid = { version = "1.11", features = ["v4"] }
blake3 = "1"
tempfile = "3.14"

# CLI utilities
comfy-table = "7"
walkdir = "2"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"
globset = "0.4"
ignore = "0.4"
dirs = "5"
sha2 = "0.10"
zip = { version = "2", features = ["deflate"] }
indicatif = "0.17"

# Arrow/Parquet for preview
arrow = { workspace = true, optional = true }
parquet = { workspace = true, optional = true }
csv = { version = "1", optional = true }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# TUI LLM Integration
thiserror.workspace = true

# Local LLM (llama.cpp)
llama-cpp-2 = { version = "0.1", optional = true }
hf-hub = { version = "0.3", optional = true }

# Profiling (optional)
casparian_profiler = { path = "../casparian_profiler", optional = true }

# Signal handling (Unix)
[target.'cfg(unix)'.dependencies]
signal-hook = "0.3"
libc = "0.2"

# Signal handling (Windows)
[target.'cfg(windows)'.dependencies]
ctrlc = "3.4"

[features]
default = ["profiling", "data-plane", "duckdb"]  # Profiling enabled by default for dev
full = []  # Gate slow/interactive tests
local-llm = ["llama-cpp-2", "hf-hub"]  # Local LLM via llama.cpp
profiling = ["dep:casparian_profiler"]  # TUI profiler overlay (` or F12 toggle)
data-plane = ["dep:arrow", "dep:parquet", "dep:csv"]
# DuckDB: uses system libduckdb (fast dev builds, requires: brew install duckdb)
duckdb = ["casparian_db/duckdb", "casparian_sinks/sink-duckdb"]
# DuckDB bundled: compile from source (slow, but self-contained for releases)
duckdb-bundled = ["casparian_db/duckdb-bundled", "casparian_sinks/sink-duckdb-bundled"]
sqlite = []

[dev-dependencies]
filetime = "0.2"
criterion = "0.5"

[[bench]]
name = "scanner_perf"
harness = false
