[package]
name = "casparian_backtest"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Backtest Engine - Multi-file validation with fail-fast optimization"

[lib]
name = "casparian_backtest"
path = "src/lib.rs"

[dependencies]
# Schema contracts
casparian_schema = { path = "../casparian_schema" }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

# UUID for IDs
uuid = { version = "1.11", features = ["v4", "serde"] }

# Timestamps
chrono = { version = "0.4", features = ["serde"] }

# Database (async sqlx)
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Logging
tracing.workspace = true

# Error handling
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
