[package]
name = "casparian_db"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Database abstraction layer for Casparian Flow"

[features]
default = ["duckdb"]
# DuckDB: use system libduckdb (fast dev builds, requires: brew install duckdb)
duckdb = ["dep:duckdb", "dep:fs2"]
# DuckDB bundled: compile from source (slow, but self-contained for releases)
duckdb-bundled = ["duckdb", "duckdb/bundled"]

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
rusqlite = { version = "0.31" }

# DuckDB support (columnar OLAP database)
# Note: No "bundled" feature by default - uses system libduckdb for fast dev builds
# Enable duckdb-bundled feature for self-contained release builds
duckdb = { version = "1.4", optional = true }

# File locking for DuckDB single-writer coordination
# Note: std::fs::File::lock() requires Rust 1.89+, but MSRV is 1.75
# fs2 provides cross-platform file locking for older Rust versions
fs2 = { version = "0.4", optional = true }

[dev-dependencies]
tempfile = "3.10"
