[package]
name = "casparian_intent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
serde_json.workspace = true
