[package]
name = "casparian_mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Model Context Protocol server for Claude Code integration"

[lib]
name = "casparian_mcp"
path = "src/lib.rs"

[dependencies]
# Internal crates
casparian_schema = { path = "../casparian_schema" }
casparian_backtest = { path = "../casparian_backtest" }
casparian_ids = { path = "../casparian_ids" }

# Async runtime
tokio = { workspace = true }
async-trait = "0.1"

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

# UUID for random identifiers
uuid = { version = "1.11", features = ["v4", "serde"] }

# Timestamps
chrono = { version = "0.4", features = ["serde"] }


# Logging
tracing.workspace = true

# Error handling
thiserror.workspace = true

# Home directory detection
dirs = "5.0"

[dev-dependencies]
tempfile = "3"
criterion = "0.5"

[[bench]]
name = "quick_scan_perf"
harness = false
