[package]
name = "casparian_mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "MCP (Model Context Protocol) server for Casparian Flow"

[dependencies]
# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

# UUID for job/approval IDs
uuid = { version = "1", features = ["v4", "serde"] }

# SHA256 for redaction hashing
sha2 = "0.10"
hex = "0.4"

# Base64 for binary data encoding
base64 = "0.22"

# File system utilities
walkdir = "2"
glob = "0.3"
dirs = "5"

# Regex for SQL validation
regex = "1"

# Random number generation for deterministic sampling
rand = "0.8"
rand_chacha = "0.3"

# MD5 for proposal hashing
md5 = "0.7"

# Arrow for working with Arrow data from worker
arrow.workspace = true

# Internal crates - we call these directly, not via CLI
casparian_db = { path = "../casparian_db" }
casparian_protocol = { path = "../casparian_protocol" }
casparian_intent = { path = "../casparian_intent" }
casparian_schema = { path = "../casparian_schema" }
casparian_sentinel = { path = "../casparian_sentinel" }
casparian_backtest = { path = "../casparian_backtest" }
casparian_worker = { path = "../casparian_worker" }
casparian_sinks = { path = "../casparian_sinks" }

[dev-dependencies]
tempfile = "3"

[features]
default = []
