[package]
name = "casparian_protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
byteorder.workspace = true
thiserror.workspace = true
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
url = "2.5"
blake3 = "1.5"

[dev-dependencies]
anyhow.workspace = true
