[package]
name = "casparian_schema"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Schema Contract System - Schema is Intent, then Contract"

[lib]
name = "casparian_schema"
path = "src/lib.rs"

[dependencies]
# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

# Protocol types (canonical DataType)
casparian_protocol = { path = "../casparian_protocol" }

# UUID for contract IDs
uuid = { version = "1.11", features = ["v4", "serde"] }

# Timestamps
chrono = { version = "0.4", features = ["serde"] }

# Database (async sqlx)
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Error handling
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
