[package]
name = "casparian_scout"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Filesystem scanner and data transformer for Casparian Flow"

[lib]
name = "casparian_scout"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { workspace = true, features = ["full", "sync"] }

# Database
sqlx.workspace = true

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

# Arrow & Parquet for data processing
arrow.workspace = true
parquet.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true

# File walking
walkdir = "2.5"
jwalk = "0.8"  # Parallel walking

# Glob pattern matching
glob = "0.3"

# CSV parsing
csv = "1.3"

# Regex for pattern matching and PII detection
regex = "1.10"

# Chrono for timestamps
chrono = { version = "0.4", features = ["serde"] }

# Blake3 for fast hashing
blake3 = "1.5"

# TOML for config
toml = "0.8"

# Home directory detection
dirs = "5.0"

# Lazy initialization for regex patterns
once_cell = "1.19"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
filetime = "0.2"
