[package]
name = "casparian_scout"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
casparian_db = { path = "../casparian_db", default-features = false }
casparian_ids = { path = "../casparian_ids" }
casparian_ai_types = { path = "../casparian_ai_types" }
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing.workspace = true
uuid = { version = "1.11", features = ["v4"] }
glob = "0.3"
globset = "0.4"
ignore = "0.4"
walkdir = "2"
dirs = "5"
tempfile = "3.14"
bincode = "1.3"

# Optional data-plane deps (match casparian feature flags)
arrow = { workspace = true, optional = true }
parquet = { workspace = true, optional = true }
csv = { version = "1", optional = true }

[features]
default = ["duckdb"]
data-plane = ["dep:arrow", "dep:parquet", "dep:csv"]
duckdb = ["casparian_db/duckdb"]
duckdb-bundled = ["casparian_db/duckdb-bundled"]
sqlite = []

[dev-dependencies]
filetime = "0.2"

[[bin]]
name = "casparian-scout-scan"
path = "src/bin/scout_scan.rs"
