[package]
name = "casparian_sentinel"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "casparian_sentinel"
path = "src/lib.rs"

[dependencies]
# Protocol
casparian_protocol = { path = "../casparian_protocol" }

# ZeroMQ
zmq.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Database
casparian_db = { path = "../casparian_db" }
casparian_schema = { path = "../casparian_schema" }
casparian_security = { path = "../casparian_security" }

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender = "0.2"

# CLI
clap.workspace = true

# Utilities
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
dirs = "5"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"
