[package]
name = "casparian_sinks"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
casparian_protocol = { path = "../casparian_protocol" }
casparian_db = { path = "../casparian_db", default-features = false, optional = true }

anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true

arrow.workspace = true
parquet.workspace = true
csv = "1"
duckdb = { version = "1.4", features = ["appender-arrow"], optional = true }
chrono.workspace = true
rust_decimal = "1.40"
blake3 = "1.5"

[dev-dependencies]
tempfile = "3"
proptest = "1.4"

[features]
# DuckDB enabled by default.
default = ["sink-duckdb"]
sink-duckdb = ["dep:duckdb", "dep:casparian_db", "casparian_db/duckdb"]
sink-duckdb-bundled = ["sink-duckdb", "casparian_db/duckdb-bundled", "duckdb/bundled"]
# Expose internal Arrow accessors for workspace crates.
internal = []
