[package]
name = "casparian_tape"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Event recording and replay for Casparian Flow sessions"

[lib]
name = "casparian_tape"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
blake3 = "1.5"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
thiserror.workspace = true

[dev-dependencies]
tempfile = "3.14"
