[package]
name = "casparian_test_utils"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Docker-based test utilities for PostgreSQL and MSSQL testing"

[dependencies]
# Async runtime
tokio = { workspace = true }

# Database
sqlx = { workspace = true, features = ["runtime-tokio-native-tls", "postgres"] }

# MSSQL support (optional)
tiberius = { version = "0.12", optional = true, features = ["chrono"] }
tokio-util = { version = "0.7", features = ["compat"], optional = true }

# Arrow for sink writers
arrow = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# URL parsing for sink URIs
url = "2.5"

# UUID for test schema names
uuid = { version = "1.11", features = ["v4"] }

# Tracing
tracing = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
docker-tests = []
mssql = ["dep:tiberius", "dep:tokio-util"]
