[package]
name = "casparian_worker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "casparian_worker"
path = "src/lib.rs"

[dependencies]
# Protocol
casparian_protocol = { path = "../casparian_protocol" }

# Async runtime
tokio.workspace = true

# ZeroMQ
zeromq.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Arrow & Parquet
arrow.workspace = true
parquet.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# CLI
clap.workspace = true

# Utilities
lasso = "0.7"
sha2 = "0.10"
regex = "1.10"
hex = "0.4"
uuid = { version = "1.11", features = ["v4"] }
walkdir = "2.5"
which = "7.0"
chrono = "0.4"
base64 = "0.22"
futures = "0.3"
[dev-dependencies]
tempfile = "3"
