[package]
name = "casparian_worker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "casparian_worker"
path = "src/lib.rs"

[dependencies]
# Protocol
casparian_protocol = { path = "../casparian_protocol" }
casparian_sinks = { path = "../casparian_sinks" }

# Async runtime
tokio.workspace = true

# ZeroMQ
zeromq.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Arrow & Parquet
arrow.workspace = true
parquet.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true

# CLI
clap.workspace = true

# Utilities
lasso = "0.7"
regex = "1.10"
walkdir = "2.5"
which = "7.0"
chrono = "0.4"
base64 = "0.22"
[dev-dependencies]
tempfile = "3"
