[package]
name = "casparian_worker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "casparian_worker"
path = "src/lib.rs"

[dependencies]
# Protocol
casparian_protocol = { path = "../casparian_protocol" }
casparian_sinks = { path = "../casparian_sinks", features = ["internal"] }

# ZeroMQ
zmq.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Arrow & Parquet
arrow.workspace = true
parquet.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true

# CLI
clap.workspace = true

# Utilities
chrono = "0.4"
base64 = "0.22"
blake3 = "1"
walkdir = "2.5"
which = "7.0"
dirs = "5"
toml = "0.8"
[dev-dependencies]
tempfile = "3"
