[package]
name = "cf_protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
byteorder.workspace = true
thiserror.workspace = true

[dev-dependencies]
anyhow.workspace = true
